icon safari fix

--- a/style.css
+++ b/style.css
@@ -561,8 +561,7 @@ font-style: normal;
 	width: 70px;
 	height: 70px;
 	fill: #ffc30e;
-	margin: 0 auto;
-	padding: 10px 0 0;
+	margin: 10px auto;
 }
 .icon-posters {
 	/*fill: #000000;*/
